--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.css
@@ -8,4 +8,11 @@
     padding: 10px;
     border: 1px solid rgb(193, 191, 191);
     border-radius: 10px;
+    min-width: 18rem;
+}
+
+@media only screen and (max-width: 400px) {
+    .cart {
+        min-width: 15rem;
+    }
 }
