--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -3,17 +3,17 @@
   @if(isLoading){
   <app-loader />
   }@else{
-  <div class="row d-flex gap-2" style="width: 100%; flex-wrap: nowrap">
-    <div class="col-3 cart" style="border-left: 5px solid #4d4e8e">
+  <div class="d-flex flex-wrap gap-2" style="width: 100%">
+    <div class="cart" style="border-left: 5px solid #4d4e8e">
       <div class="info">
         <h6 style="color: #4d4e8e">Earning</h6>
         <h4 class="text-muted fw-bold">
-          {{ bookingDetails?.totalEarning | currency }}
+          {{ bookingDetails?.totalEarning | currency : "INR" }}
         </h4>
       </div>
       <span style="font-size: 30px; color: #4d4e8e">&#8377;</span>
     </div>
-    <div class="col-3 cart" style="border-left: 5px solid #ff5f51">
+    <div class="cart" style="border-left: 5px solid #ff5f51">
       <div>
         <h6 style="color: #ff5f51">Bookings</h6>
         <h4 class="text-muted fw-bold">
@@ -24,7 +24,7 @@
         <i class="fa-solid fa-ticket"></i>
       </span>
     </div>
-    <div class="col-3 cart" style="border-left: 5px solid #23c58b">
+    <div class="cart" style="border-left: 5px solid #23c58b">
       <div class="info">
         <h6 style="color: #23c58b">Travelers</h6>
         <h4 class="text-muted fw-bold">{{ bookingDetails?.totalSeats }}</h4>
@@ -33,7 +33,7 @@
         <i class="fa-solid fa-car"></i>
       </span>
     </div>
-    <div class="col-3 cart" style="border-left: 5px solid #f7c23e">
+    <div class="cart" style="border-left: 5px solid #f7c23e">
       <div class="info">
         <h6 class="text-warning">Pending Rides</h6>
         <h4 class="text-muted fw-bold">{{ bookingDetails?.pendingRides }}</h4>
@@ -42,9 +42,7 @@
         <i class="fa-solid fa-clock"></i>
       </span>
     </div>
-  </div>
-  <div class="row mt-2">
-    <div class="col-3 cart" style="border-left: 5px solid red">
+    <div class="cart" style="border-left: 5px solid red">
       <div class="info">
         <h6 class="text-danger">Cancellation Rate</h6>
         <h4 class="text-muted fw-bold">
@@ -56,8 +54,10 @@
       </span>
     </div>
   </div>
+  <h2 class="text-muted text-center mt-2">Car and Earnings</h2>
+
   }
-  <div>
-    <canvas id="MyChart"></canvas>
+  <div style="overflow-x: auto; width: 100%; margin-top: 10px">
+    <canvas id="MyChart" style="width: 100%; height: auto"></canvas>
   </div>
 </div>
