--- a/src/app/pages/admin/payment-details/payment-details.component.html
+++ b/src/app/pages/admin/payment-details/payment-details.component.html
@@ -15,7 +15,7 @@
           <th scope="col">Date</th>
           <th scope="col">Invoice ID</th>
           <th scope="col">Amount</th>
-          <th scope="col">Action</th>
+          <!-- <th scope="col">Action</th> -->
         </tr>
       </thead>
       <tbody>
